# popt

./: .cvsignore  .gitignore  .splintrc  CHANGES  CMakeLists.txt  CREDITS  Doxyfile.in  Makefile  Makefile.am  Makefile.mingw  README  README-prereq  acinclude.m4  autogen.sh  conanfile.py  config.h.mingw  configure.ac  findme.c  findme.h  libpopt.vers  lookup3.c  popt-vg.supp  popt.3  popt.c  popt.h  popt.pc.in  popt.spec  popt.spec.in  poptconfig.c  popthelp.c  poptint.c  poptint.h  poptparse.c  system.h  tdict.c  test-poptrc  test1.c  test2.c  test3.c  testit.sh
.github/workflows/: codeql.yml  linux.yml  main.yml
auto/: .cvsignore  Makefile.am  desc.in  popt.types.in  types.in
build-aux/: .cvsignore
ci/: Dockerfile  distcheck.sh
cmake/: popt.pc.in  poptConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in
m4/: .cvsignore  popt.m4
po/: .cvsignore  CMakeLists.txt  ChangeLog  LINGUAS  Makevars  POTFILES.in  Rules-popt  ar.po  bg.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu_ES.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  ht.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ka.po  kn.po  ko.po  lt.po  (+30 more)
popt.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  Makefile.am  lookup3.c  popt.c  popt.h  popt.h.in  poptconfig.c  popthelp.c  poptint.c  poptint.h  poptparse.c  system.c  system.h
test3-data/: 02.answer
test_package/: CMakeLists.txt  conanfile.py
tests/: CMakeLists.txt  Makefile.am  tdict.c  test1.c  test2.c  test3.c  testit.sh
tests/test3-data/: 01.input
